--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Build blog project
         run: |
           echo ${{ github.workspace }}
-          npm run build
+          npm run docs:build
 
         # 资源拷贝
       - name: Build with Jekyll
