--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "preview": "vitepress preview"
   },
   "devDependencies": {
+    "medium-zoom": "^1.1.0",
     "typescript": "^5.9.3",
     "vue-tsc": "^3.1.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@nolebase/vitepress-plugin-inline-link-preview": "^2.14.0",
     "swiper": "^11.2.4",
     "vitepress": "^1.6.3",
